# SO2_GAME

./: .gitignore  CMakeLists.txt  README.md  beast.h  clean.sh  coin.h  common.h  configure.sh  headers.h  main.c  main.cpp  player.h  signature.h  start_player.sh  start_player1.sh  start_player2.sh  start_player3.sh  start_player4.sh  start_server.sh
assets/: map.txt  map1.txt  map2.txt  map3.txt
client/: CMakeLists.txt  client.c  clienttest  clienttest.c
scripts/: build.sh  clean.sh
